--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@prisma/client": "^3.14.0",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "next": "12.1.6",
+    "prisma": "^3.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "styled-components": "^5.3.5"
